# snakemake-staging

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/snakemake_staging/: __init__.py  config.py  rules.py  stages.py  testing.py  utils.py  zenodo.py  zenodo_mock.py
src/snakemake_staging/workflow/: Snakefile
src/snakemake_staging/workflow/rules/: git.smk  noop.smk  stages.smk  zenodo.smk
tests/: runner.py  test_config.py  test_noop.py  test_testing.py  test_zenodo.py  zenodo_mock.py
tests/projects/: .gitignore
tests/projects/noop-restore/: Snakefile  config.yaml
tests/projects/noop-snapshot/: Snakefile
tests/projects/zenodo-restore/: Snakefile  stage.json
tests/projects/zenodo-snapshot/: Snakefile
