[tool.poetry]
name = "snakemake-staging"
version = "0.0.0"
description = ""
authors = ["Dan Foreman-Mackey <foreman.mackey@gmail.com>"]
readme = "README.md"
packages = [{ include = "snakemake_staging", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
snakemake = "*"  # TODO(dfm): Figure out a minimum version
requests = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
responses = "^0.23.1"
flask = "^2.3.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
folders = [{ path = "src" }]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
target-version = ["py38", "py39"]
line-length = 88

[tool.ruff]
line-length = 89
update-check = false
target-version = "py38"
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLW"]
ignore = []
exclude = []

[tool.ruff.isort]
force-wrap-aliases = true
combine-as-imports = true
